--- a/CZP.html
+++ b/CZP.html
@@ -63,7 +63,7 @@
             <h1>CZP Projecten</h1>
             <p>
 
-                Gedurende mijn middelbare school heb ik projecten gedaan voor CKV waar ik verschillende dingen moest maken/doen op deze pagina laat ik alles zien wat ik gedaan heb buiten de CAP opdrachten.
+                Gedurende mijn middelbare school heb ik projecten gedaan voor CKV waar ik verschillende dingen moest maken/doen. Op deze pagina laat ik alles zien wat ik gedaan heb buiten de CAP opdrachten.
                 <br>
             </p>
         </div>
@@ -74,9 +74,9 @@
                 Cultrureel zelf portret - Kunst en ik
             </h1>
             <p>
-                Dit is mijn CZP iets waar je al de hele tijd door heen kijkt. Ik heb deze website zelf geschreven met code, deze website kan bekeken worden vanaf elk device en zal er nog mooi uitzien. In een CZP laat ik zien wat ik tijdens CKV heb gedaan.
+                Dit is mijn CZP, iets waar je al de hele tijd door heen kijkt. Ik heb deze website zelf geschreven met code, deze website kan bekeken worden vanaf elk device en zal er nog mooi uitzien. In een CZP laat ik zien wat ik tijdens CKV heb gedaan.
                 <br><br>
-                Ik vond dit een erg leuke opdracht, omdat ik website maken wel leuk vindt, maar het kost erg veel tijd. Voor de rest is hier rechts een foto van een stukje code van de website zelf.
+                Ik vond dit een erg leuke opdracht, omdat ik website maken wel leuk vind, maar het kost erg veel tijd. Voor de rest is hier rechts een foto van een stukje code van de website zelf.
             </p>
         </div>
         <img src="media/code.png" width="600px" style="margin: 12px;">
@@ -87,9 +87,9 @@
                 CZP Film
             </h1>
             <p>
-                In deze opdracht moesten we een filmpje maken. Ik had gekozen voor een stopmotion filmpje te maken hierbij moest ik ook een storyboard maken en een script. Ik had een stopmotion gemaakt over vliegtuigen en nog specifieker de belugaXL en hoe die rondt de wereld gaat om vliegtuig onderdelen bij de fabriek te brengen om het in elkaar te zetten.
+                In deze opdracht moesten we een filmpje maken. Ik had gekozen voor een stopmotion filmpje en hierbij moest ik ook een storyboard maken en een script. Ik had een stopmotion gemaakt over vliegtuigen en nog specifieker de Airbus BelugaXL en hoe die rond de wereld gaat om vliegtuigonderdelen op te halen in de verschillende toeleveranciers van Airbus en bij de fabriek in Toulouse te brengen om het uiteindelijke vliegtuig in elkaar te zetten.
                 <br><br>
-                deze opdracht was erg leuk ik kon mijn liefde voor vliegtuigen gebruiken om een leuk filmpje te maken en het storyboard maken was erg leuk het tekenen was iets wat ik niet vaak deed. klik hier rechts voor het script en andere bestanden. Hier heb je de <a href="https://youtu.be/8BpmeTTVTp4" style="color: rgb(109, 109, 233);">
+                Deze opdracht was erg leuk, ik kon mijn liefde voor vliegtuigen gebruiken om een leuk filmpje te maken en het storyboard maken was ook erg leuk. Het tekenen was iets wat ik niet vaak deed, maar vond ik uiteindelij wel leuk om te doen. klik hier rechts voor het script en andere bestanden. Hier heb je de <a href="https://youtu.be/8BpmeTTVTp4" style="color: rgb(109, 109, 233);">
                     <p>video</p>
                 </a>
             </p>
@@ -113,9 +113,9 @@
                 CZP Dans
             </h1>
             <p>
-                Bij ckv hadden we de dans opdracht waar we onderzoek moesten doen naar verschillende dans tijdperken ik heb toen gekozen voor michael jackson en zijn tijdperk, hierbij maakte ik een infographic en een presentatie erbij
+                Bij CKV hadden we de dans opdracht waar we onderzoek moesten doen naar verschillende dans tijdperken ik heb toen gekozen voor Michael Jackson en zijn tijdperk, hierbij maakte ik een infographic en ook een presentatie erbij
                 <br><br>
-                Ik vond dit één van de minder leuke doordat dans niet mijn ding is en ik er weinig intresse in heb, waar ik wel intresse in heb is de muziek dus dat was wel een plus punt. Klik hier rechts voor de presentatie
+                Ik vond dit één van de minder leuke doordat dans niet mijn ding is en ik er weinig intresse in heb, waar ik wel interesse in heb is de muziek dus dat was wel een plus punt. Klik hier rechts voor de presentatie
             </p>
         </div>
         <a href="https://youtu.be/PI0gw83hOEo"><img src="media/dans.JPG" width="400px" style="margin: 12px;"></a>
@@ -126,7 +126,7 @@
                 CZP Fotografie
             </h1>
             <p>
-                De laatse CZP opdracht van jaar 4 hier heb ik veel foto's moeten maken. Deze opdracht bestond eigenlijk uit 3 verscillende opdrachten de eerste was dat ik 7 zelfgemaakte foto's moest matchen met de 7 hoofdaspecten. De tweede was 3 foto's van de vorige opdracht bewerken en ze te vervagen/verduidelijken of feit/fictie er aan toe te passen. De laatste moesten we meerdere foto's maken ik had voor het zelf portret gekozen en had een techniek gebruikt voor licht tekenen waar je de camera lens lang open zet en dan met licht tekenen.
+                De laatse CZP opdracht van jaar 4. Hier heb ik veel foto's moeten maken. Deze opdracht bestond eigenlijk uit 3 verschillende opdrachten. De eerste was dat ik zeven zelfgemaakte foto's moest matchen met de 7 hoofdaspecten. De tweede was 3 foto's van de vorige opdracht bewerken en ze te vervagen/verduidelijken of feit/fictie er aan toe te passen. Als laatste moesten we meerdere foto's maken. Ik had voor het zelf portret gekozen en had een techniek gebruikt voor licht tekenen waar je de camera lens lang open zet en dan met licht tekent.
                 <br><br>
                 Dit was wel één van de leukste die ik heb gedaan, omdat ik al van fotografie hou. Wil je de resultaten zien klik hier rechts op een van de foto's voor meer info over die opdracht.
             </p>
