--- a/ECE.html
+++ b/ECE.html
@@ -34,7 +34,7 @@
                     </ul>
                 </div>
                 <div class="hamburger">
-                    <i><img src="media/Logo/hamburger_icon.svg" alt="hamburger menu icon" onclick="open_hamburger_menu()"></i>
+                    <i><img src="media/hamburger_icon.svg" alt="hamburger menu icon" onclick="open_hamburger_menu()"></i>
                 </div>
             </div>
         </nav>
@@ -59,10 +59,10 @@
     </header>
     <div class="text_block">
         <div class="text_block_flex">
-            <h1>Eigen culturele ervaringen</h1>
+            <h1>Eigen Culturele Ervaringen</h1>
             <p>
                 <br>
-                Hier laat ik zien wat ik heb gedaan buiten school aan culturele activiteiten.
+                Hier laat ik zien wat ik buiten school heb gedaan aan culturele activiteiten.
             </p>
         </div>
 
@@ -72,9 +72,9 @@
             <h1>Arjen Lubach</h1>
             <p>
                 <br>
-                Ik ben naar arjan lubach zijn persoonlijke show waar hij over zijn leven vertelt en dat combineerd met comedie dit heeft weinig te maken met zondag met lubach of de avondshow. Het was een erg grappige show met vol comedie. Ik ga niet vaak naar zulke shows, maar dit vondt ik echt de moeite waard.
+                Ik ben naar Arjen Lubach zijn persoonlijke show geweest waar hij over zijn leven vertelt en dat combineert met comedie. Dit heeft weinig te maken met Zondag met Lubach of De Avondshow. Het was een erg grappige show vol met comedie. Ik ga niet vaak naar zulke shows, maar dit vond ik echt de moeite waard.
                 <br><br>
-                Een paar hoogtepunten waren dat er met een camera door het publiek heen ging onder een liedje zong arjen over allemaal mensen waar de camera op inzoomt. de foto hier links is niet van mij ik heb helaas geen foto gemaakt toen ik daar was.
+                Een paar hoogtepunten waren dat er met een camera door het publiek gegaan werd en ondertussen zong Arjen een liedje over allemaal mensen waar de camera op inzoomt. Hij improviseerde dit ter plekke. Dat was echt heel knap. De foto hier links is niet van mij, ik mocht helaas geen foto maken toen ik daar was.
             </p>
         </div>
         <img src="media/lubach.jpg" width="300px" alt="">
