--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style2.css">
     <link rel="icon" type="image/x-icon" href="media/Logo/favicon.ico">
     <script defer src="animation.js"></script>
-    <title>Airbus</title>
+    <title>Home</title>
 </head>
 
 <body>
