--- a/CAP.html
+++ b/CAP.html
@@ -63,7 +63,7 @@
             <p>
             <h1>CAP</h1>
             <br>
-            Tijdens mijn middelbare school heb ik bij CKV verschillende CAP opdrachten gedaan waar ik in contact kom met culturele ervaringen op deze pagina laat ik het zien
+            Tijdens mijn middelbare school heb ik bij CKV verschillende CAP opdrachten gedaan waar ik in contact kom met culturele ervaringen. Op deze pagina laat ik het zien.
             <br>
             </p>
         </div>
@@ -73,9 +73,9 @@
             <h1>CAP 1 Film</h1>
             <p>
                 <br>
-                bij CAP 1 ben ik met mijn vader naar filmhuis/film museum The Eye gegaan in amsterdam het museum zelf was uitzichzelf al een erg leuke ervaring toen het tijd was voor de film gingen we in de zaal zitten waar een grote zaal waar er origineel van de tape werd afgespeelt inplaats van digitaal.
+                Bij CAP 1 ben ik met mijn vader naar filmhuis/film museum The Eye gegaan in Amsterdam. Het museum zelf was op zichzelf al een erg leuke ervaring en toen het tijd was voor de film gingen we in de zaal zitten. In deze grote zaal werd de film origineel van de tape afgespeelt inplaats van digitaal. Dat was heel bijzonder en gaf een nog intensere filmervaring.
                 <br><br>
-                dit vondt ik persoonlijk de leukste CAP, omdat ik al van film kijken hou oppenheimer was een qualiteit film als je meer wilt lezen over mijn ervaring klik dan op de afbeelding hier rechts
+                Dit vond ik persoonlijk de leukste CAP, omdat ik al van film kijken houd en oppenheimer was een kwaliteits film. Als je meer wilt lezen over mijn ervaring klik dan op de afbeelding hier rechts.
             </p>
 
         </div>
@@ -86,9 +86,9 @@
             <h1>CAP 2 Musuem</h1>
             <p>
                 <br>
-                bij CAP 2 moesten we naar een museum en hier een presentatie bij doen ik vondt het museum zelf erg leuk omdat ik naar het nationaal militair musuem in soesterberg ging waar ik een erg leuke ervaring had met alle vliegtuigen die ze hebben opgehangen aan het plafond voegt meer toe dan als ze alleen op de grond staan.
+                Bij CAP 2 moesten we naar een museum en hier een presentatie bij doen. Ik vond het museum zelf erg leuk omdat ik naar het Nationaal Militair Museum in Soesterberg ging waar ik een erg leuke ervaring had met alle vliegtuigen die ze hebben opgehangen aan het plafond. Dit voegt meer toe dan als ze alleen op de grond staan, omdat het de illusie geeft dat ze vliegen.
                 <br><br>
-                Er was ook veel te leren over onze geschiedenis in de eerste en tweede wereld oorlog waar gevochten werd voor onze vrijheid wat belangerijk is om te onthouden en door te geven op volgende generatie's. Klik op de foto hiernaast om het filmpje te zien
+                Er was ook veel te leren over onze geschiedenis in de Eerste en Tweede Wereld oorlog waar gevochten werd voor onze vrijheid. Dit is belangrijk om te onthouden en door te geven op volgende generatie's omdat vrijheid niet vanzelfsprekend is en de geschiedenis zich vaak herhaalt. Klik op de foto hiernaast om het filmpje te zien
             </p>
 
         </div>
@@ -99,9 +99,9 @@
             <h1>CAP 3 Schouwburg</h1>
             <p>
                 <br>
-                bij CAP 3 ging ik met de klas naar de stads schouwburg utrecht waar we naar de voorstelling small people gingen dit was een voorstelling van interpertive dans hier moesten wij een verslag overschrijven.
+                Bij CAP 3 ging ik met de klas naar de Stadsschouwburg Utrecht waar we naar de voorstelling Small People gingen. Dit was een voorstelling van interpretive dance. Hier moesten wij een verslag over schrijven.
                 <br><br>
-                Ik vondt dit de minst leuke CAP, omdat dans niet mijn ding is ik vind het niet leuk en daardoor vond ik dit een bijzondere ervaring, meer weten over mijn ervaring klik op de afbeelding om meer te lezen.
+                Ik vond dit de minst leuke CAP, omdat dans niet echt mijn ding is en daardoor vond ik dit een bijzondere ervaring. Ik zou hier zelf nooit heen gegaan zijn en mijn mening over dans is ook niet veranderd, maar ik vond het wel bijzonder om mee te maken. Meer weten over mijn ervaring klik op de afbeelding om meer te lezen.
             </p>
 
         </div>
