--- a/CAP.html
+++ b/CAP.html
@@ -107,6 +107,22 @@
         </div>
         <a href="word documetns/Schouwburg CAP douwe.docx" download="Schouwburg CAP douwe.docx"><img src="media/Small people.png" height="200px"></a>
     </div>
+    <div class="text_block">
+        <div class="text_block_flex">
+            <h1>CAP 4 Op sterk water</h1>
+            <p>
+                Voor deze opdracht heb ik de improvisatieshow Op Sterk Water bezocht. Omdat ik zelf ook ervaring heb met improvisatie door mijn tijd op de theaterschool, was het extra leuk om te zien hoe professionele spelers dit op hoog niveau doen. De snelheid, het spelplezier en het directe contact met het publiek maakten veel indruk op me.
+
+Wat me opnieuw duidelijk werd, is dat improvisatie niet alleen een theatervorm is, maar ook echt een levensvaardigheid. Je leert snel schakelen, luisteren, meebewegen en vertrouwen op je intuïtie vaardigheden die in allerlei situaties van pas komen, op en buiten het podium.
+
+Hoewel ik dus al ervaring had, heb ik toch weer nieuwe dingen geleerd door te observeren: hoe je spanning en humor opbouwt zonder script, hoe belangrijk samenwerking is, en hoe je fouten juist kunt gebruiken als creatieve kans.
+
+Ik weet zeker dat ik improvisatie nog vaak zal gebruiken, zowel binnen theater als in andere contexten. Het blijft een waardevolle tool om flexibel en creatief te blijven denken.(klik op foto voor de video)
+            </p>
+
+        </div>
+        <a href="https://youtu.be/IGRxkLMEa8s"><img src="media/Water.jpg" height="200px"></a>
+    </div>
 </body>
 
 </html>
