--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <nav>
             <div class="flex">
                 <div class="flex3">
-                    <a href="index.html"><img style="height: 40px;" src="media/gezicht.png"></a>
+                    <a href="index.html"><img style="height: 40px;" src="media/4an5x.png"></a>
+                    <a href="index.html"><img style="height: 40px;" src="media/4an5x.png"></a><a href="index.html"><img style="height: 40px;" src="media/4an5x.png"></a>
                 </div>
                 <div class="flex2">
                     <ul class="list">
@@ -72,6 +73,17 @@
 
 
         </p>
+        <br><br>
+        <h1>Mijn pitch</h1>
+        <br><br>
+        <p>
+            <img src="media/Pitch.jpg" width="200px"><br>
+            In mijn tijd bij CKV heb ik veel gedaan buiten mijn comfort zone, ik zal hier altijd dankbaar voor zijn. <br>
+            CKV helpt je met je eigen grenzen vinden en verleggen, ook al wil je het niet :p. <br>
+            Het mooie is dat je niet per se 'goed' hoeft te zijn in iets om er toch iets uit te halen. Juist door te doen, te proberen en soms te falen, groei je creatief én persoonlijk. <br>
+            CKV is meer dan een vak; het is een ervaring waarin je jezelf op onverwachte manieren tegenkomt.
+        </p>
+         <br><a href="https://youtu.be/6NH_M_yMnvM">Mijn pitch in 1 minuut (klik)</a><br><a href="https://youtu.be/XhG7UW88Znw">Mijn pitch in het lang (klik)</a><br><a href="https://youtu.be/NV5kyzSBEZg">Kort proces (klik)</a>
     </div>
 </body>
 
