--- a/CZP.html
+++ b/CZP.html
@@ -137,6 +137,57 @@
             <a href="word documetns/Document 2024-06-03T08_02_32.docx" download="Douwe Fotografie 3 opdracht"><img src="media/Licht tekening.jpg" height="200px" alt=""></a>
         </div>
     </div>
+     <div class="text_block">
+        <div class="text_block_flex">
+            <h1>
+                CZP Tragedie
+            </h1>
+            <p>
+            Hoewel ik al eerder toneel heb gedaan, was dit mijn eerste echte ervaring met het spelen van een tragedie. Die vorm van theater kende ik nog niet van dichtbij, dus het was een nieuwe uitdaging voor mij. Ik merkte dat een tragedie iets heel anders vraagt dan andere vormen van toneel.
+
+Tijdens het proces heb ik echt mijn grenzen kunnen verleggen. Ik leerde om me beter in te leven in mijn personage en om emoties overtuigend over te brengen. Ook het samenwerken in een groep vond ik waardevol we hebben elkaar ondersteund en samen iets moois neergezet.
+
+Hoewel ik niet van plan ben om me verder te verdiepen in tragedie, vond ik het bijzonder om dit een keer te doen. Het heeft me een nieuwe kant van theater laten zien en ik kijk er nu met meer waardering naar.
+
+Tijdens deze opdracht kwam ik in aanraking met het werk van William Shakespeare, in het bijzonder Othello. Het was indrukwekkend om te zien hoe tijdloos en krachtig zijn teksten zijn, en hoe relevant de thema’s nog steeds zijn. (Klik op de afbeelding voor de video)
+            </p>
+        </div>
+        <a href="https://youtu.be/KRNobUN8Flg"><img src="media/Thumbnail othello.png" width="400px" style="margin: 12px;"></a>
+    </div>
+     <div class="text_block">
+        <div class="text_block_flex">
+            <h1>
+                CZP Crossover Fusion
+            </h1>
+            <p>
+               Voor deze crossover/fusion-opdracht heb ik verschillende kunststijlen met elkaar gecombineerd, iets wat ik nog niet eerder op deze manier had gedaan. Hoewel ik al enige ervaring heb met kunst en vormgeving, was het echt nieuw voor mij om zulke verschillende stijlen zoals de gotiek  en het kubisme samen te brengen in één werk.
+                Het was soms best een uitdaging om twee stijlen die zo verschillend zijn qua vorm en betekenis met elkaar te laten versmelten, maar juist daardoor heb ik er veel van geleerd. Ik moest goed nadenken over compositie, contrast en hoe ik elementen herkenbaar kon houden zonder dat het een rommeltje werd. Door dit proces ben ik creatief echt een stap verder gekomen.
+                <br><br>
+                Wat ik vooral interessant vond, was hoe je door stijlen te combineren een heel nieuw beeldverhaal kunt creëren. In de toekomst zou ik het zeker nog een keer willen proberen misschien met andere stijlcombinaties of in een andere kunstvorm, zoals digitaal werk of installatiekunst.
+                Ik vond dit één van de minder leuke doordat dans niet mijn ding is en ik er weinig intresse in heb, waar ik wel interesse in heb is de muziek dus dat was wel een plus punt. Klik hier rechts voor de presentatie. (klik op foto voor de rest van de opdracht)
+            </p>
+        </div>
+        <div class="imgsbs">
+            <a href="word documetns/Paus Strip uitleg(1).docx" download="Douwe Strip uitleg"><img src="media/Kunst strip.jpg" height="200px" alt=""></a>
+            <img src="media/Fusion.jpg" height="200px" alt=""></a>
+            
+        </div>
+    </div>
+     <div class="text_block">
+        <div class="text_block_flex">
+            <h1>
+                CZP Muziek
+            </h1>
+            <p>
+                Voor deze muziekopdracht heb ik gewerkt aan een vlog waar ik vergelijken van twee protestliederen: Ode to Joy van Beethoven en Masters of War van Bob Dylan. Hoewel ik al ervaring had met muziek luisteren en analyseren, was het nieuw voor mij om muziek echt als vorm van protest en maatschappelijke boodschap te benaderen.
+
+                Wat ik hiervan geleerd heb, is hoe verschillend protestmuziek kan klinken, maar toch eenzelfde kracht kan uitstralen. Ode to Joy gebruikt klassieke muziek om een boodschap van hoop, broederschap en eenheid over te brengen, terwijl Masters of War juist rauw, direct en confronterend is in zijn kritiek op machthebbers en oorlog. Het verschil tussen deze twee stijlen maakte het heel interessant om te onderzoeken hoe muziek mensen kan raken en aanzetten tot nadenken.
+
+                Door deze opdracht ben ik in aanraking gekomen met het werk van Ludwig van Beethoven en Bob Dylan twee totaal verschillende kunstenaars die elk op hun eigen manier een blijvende impact hebben gehad. Het was bijzonder om te zien hoe beiden muziek gebruikten om iets groters te zeggen dan alleen noten en woorden.(klik op foto voor de video)
+            </p>
+        </div>
+        <a href="https://youtu.be/rKdfvANRmec"><img src="media/Masters of war.jpg" width="300px" style="margin: 12px;"></a>
+    </div>
 </body>
 
 </html>
